     checking against the first scenario instead of the last played scenario.
   * Fixed AI engine names in the MP game setup screen being translated to the
     language selected when Wesnoth was started rather than the current
     language (bug #22092).
   * Fixed mouse tracking issue with workaround by changing the default window
     resolution for OS X to 800 x 600 (bug #20332).
 * WML engine:
   * Fixed a regression in 1.11.14 causing WML parser/preprocessor errors to
     not interrupt the game load sequence or display an error message in-game,
     resulting in loading malformed/incomplete WML data
     <http://r.wesnoth.org/p571380>.
   * Schema validator messages now conform better to the new WML
     parser/preprocessor diagnostics format introduced in version 1.11.10.
 * Miscellaneous and bug fixes:
   * Backported Elvish_Hunter's wmltools GUI from master
   * Changed the fungus overlay terrain to prefer the movement costs of the
     base terrain (bug #21971).
   * Default to classic minimap unit/village color coding (colored by side).
   * Default to classic minimap terrain representation (satellite view).
   * Added a default hotkey binding for the terrain description help action
     (Ctrl+t).
   * Deleted obsolete UI themes.
   * Disabled orbs for enemy units.
   * Display the tooltip for actions browsed in the hotkey preferences dialog.
   * Enabled action icons in the hotkey preferences dialog.
   * Fix bug #21717: "F5->reload wml tree" doesn't work in editor.
   * Fix bug #21298: Minimap shows invisible overlays
   * Fix bug #22116: unlock movement when attacking enemy+discovering in fog
   * Fix bug #21397: "Saving and loading may cause a side's turn is not
     initialized".
   * Fix bug which caused no units to be displayed when reloading an end of
     scenario save, by stripping them from the save file. However, this does
     not fix bug #15545, which was the reason that this behavior was introduced.