@@ -139,6 +139,8 @@ public:
 	tcontrol* inspector_name;
 	tbutton* copy_button;
 
+	static const unsigned int max_inspect_win_len = 20000;
+
 
 	void clear_stuff_list()
 	{
@@ -174,13 +176,17 @@ public:
 	}
 
 
-	void set_inspect_window_text(const std::string& s)
+	void set_inspect_window_text(const std::string& s, unsigned int page = 0)
 	{
-		std::string s_ = s;
-		if(s_.length() > 20000) { // workaround for known bug
-			s_.resize(20000);
-		}
+		unsigned int reminder = (s.length() - (max_inspect_win_len * page));
+		std::string s_ = s.substr(max_inspect_win_len * page, reminder > max_inspect_win_len ? max_inspect_win_len : reminder);
 		inspect->set_label(s_);
+	}
+
+
+	unsigned int get_num_page(const std::string& s)
+	{
+		return (s.length() / max_inspect_win_len) + (s.length() % max_inspect_win_len > 0 ? 1 : 0);
 	}
 };
 
@@ -234,7 +240,12 @@ public:
 
 		FOREACH(const AUTO & c, vars.all_children_range())
 		{
-			model_.add_row_to_stuff_list("[" + c.key + "]", "[" + c.key + "]");
+			unsigned int num_pages = model_.get_num_page(config_to_string(c.cfg));
+			for (unsigned int i = 0; i < num_pages; i++) {
+				std::ostringstream cur_str;
+				cur_str << "[" << c.key << "] " << (i + 1) << "/" << num_pages;
+				model_.add_row_to_stuff_list(cur_str.str(), cur_str.str());
+			}
 		}
 
 		model_.set_inspect_window_text("");
@@ -264,11 +275,13 @@ public:
 
 		FOREACH(const AUTO & c, vars.all_children_range())
 		{
-			if(selected == i) {
-				model_.set_inspect_window_text(config_to_string(c.cfg));
-				return;
+			for (unsigned int j = 0; j < model_.get_num_page(config_to_string(c.cfg)); ++j) {
+				if (selected == i) {
+					model_.set_inspect_window_text(config_to_string(c.cfg), j);
+					return;
+				}
+				i++;
 			}
-			i++;
 		}
 	}
 
