@@ -103,6 +103,9 @@ Version 1.11.16:
      language (bug #22092).
    * Fixed mouse tracking issue with workaround by changing the default window
      resolution for OS X to 800 x 600 (bug #20332).
+   * Removed the "Replay viewer" text label from the replay controller theme,
+     because it caused problems for translators and was unnecessary
+   * Fixed bug #22337: Bug in inspect long arrays
  * WML engine:
    * Fixed a regression in 1.11.14 causing WML parser/preprocessor errors to
      not interrupt the game load sequence or display an error message in-game,
